# caleb-records

./: .clinerules  .env.example  .gitignore  AI_MEMORY.md  DEPLOY.md  MOBILE_BUILD.md  ORACLE_CLOUD_GUIDE.md  README.md  docker-compose.dev.yml  docker-compose.yml  prompt.md  render.yaml  sync-memory.sh  wrangler.jsonc
.github/workflows/: build-desktop.yml  build-mobile.yml
backend/: .env.example  Dockerfile  main.py  requirements.txt  vision.py
backend/app/: main.py
backend/app/api/: alerts.py  auth.py  deadlines.py  documents.py  grades.py  health.py  me.py  password_reset.py  public.py  reference.py  reports.py  stats.py  students.py  users.py
backend/app/core/: config.py  database.py  limiter.py  middleware.py  security.py
desktop/: README.md  package.json
desktop/src/: index.html  main.js  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/.cargo/: config.toml
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend-staff/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
frontend-staff/src/: App.jsx
frontend/src/: App.jsx  index.css  main.jsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
infrastructure/: .gitignore  README.md
infrastructure/ansible/: ansible.cfg  playbook.yml
infrastructure/terraform/: main.tf  outputs.tf  provider.tf  terraform.tfvars.example  tfplan  variables.tf
nginx/: Dockerfile  nginx.conf
scripts/: migrate_sqlite_to_postgres.py  setup-oracle-vm.sh
(+44 files in other folders)
